--- a/Login.html
+++ b/Login.html
@@ -9,8 +9,6 @@
   </head>
   <body>
     <h1>Hola! Inicia Sesion Aqui...</h1>
-    <label>Usuario</label>
-    <input type=tex>
-    
+      <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
   </body>
 </html>
